5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1888_1599.log
== SUBMITION (2019-07-09 16:02:48) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

soma = sum(valor)

if soma > 80:
	valor = soma - (soma*15%)
else:
	valor = soma
	
print(round(valor,2))
-- EXECUTION TIME:
0.579673
-- ERROR:
  File "/home/codebench/codes/1888/1599/main.py", line 8
    valor = soma - (soma*15%)
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:02:50) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

soma = sum(valor)

if soma > 80:
	valor = soma - (soma*15%)
else:
	valor = soma
	
print(round(valor,2))
-- ERROR:
File "XXXX", line 8
    valor = soma - (soma*15%)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:03:10) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

soma = sum(valor)

if soma > 80:
	valor = soma - (soma*15/100)
else:
	valor = soma
	
print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:03:11) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

soma = sum(valor)

if soma > 80:
	valor = soma - (soma*15/100)
else:
	valor = soma
	
print(round(valor,2))
-- EXECUTION TIME:
0.77609
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
Valores: 70.99
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
Valores: 128.61
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
Valores: 26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:05:56) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

if valor[i] > valor[i]=80
	valor[i] = valor[i] - (valor[i]*15/100)
	resultado = sum(valor)
else:
	resultado = sum(valor)
	
print(round(resultado,2))
-- ERROR:
File "XXXX", line 5
    if valor[i] > valor[i]=80
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:06:09) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

if valor[i] > 80
	valor[i] = valor[i] - (valor[i]*15/100)
	resultado = sum(valor)
else:
	resultado = sum(valor)
	
print(round(resultado,2))
-- ERROR:
File "XXXX", line 5
    if valor[i] > 80
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:06:10) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

if valor[i] > 80
	valor[i] = valor[i] - (valor[i]*15/100)
	resultado = sum(valor)
else:
	resultado = sum(valor)
	
print(round(resultado,2))
-- EXECUTION TIME:
0.827968
-- ERROR:
  File "/home/codebench/codes/1888/1599/main.py", line 5
    if valor[i] > 80
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:07:35) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

if valor[i] > 80:
	valor[i] = valor[i] - (valor[i]*15/100)
	resultado = sum(valor)
else:
	resultado = sum(valor)
	
print(round(resultado,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:07:35) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

if valor[i] > 80:
	valor[i] = valor[i] - (valor[i]*15/100)
	resultado = sum(valor)
else:
	resultado = sum(valor)
	
print(round(resultado,2))
-- EXECUTION TIME:
1.13624
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1599/main.py", line 5, in <module>
    if valor[i] > 80:
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:07:53) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))
i=0

if valor[i] > 80:
	valor[i] = valor[i] - (valor[i]*15/100)
	resultado = sum(valor)
else:
	resultado = sum(valor)
	
print(round(resultado,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:08:01) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))
i=0

if valor[i] > 80:
	valor[i] = valor[i] - (valor[i]*15/100)
	resultado = sum(valor)
else:
	resultado = sum(valor)
	
print(round(resultado,2))
-- EXECUTION TIME:
0.904871
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
